# remarkable-highlights

./: .gitignore  README.md  app.py  highlights.py  pyproject.toml  remarkable.py  search.sh  transfer_highlights.sh  translator.py
remarkable/: __main__.py  const.py  device.py  document.py  highlight.py  speaker.py  transform.py  translator.py
