[tool.poetry]
name = "remarkable"
version = "0.2.0"
description = "Simple ebook highlights translation and database storage"
authors = ["Marcin Tyszkiewicz <t.marcinn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
deepl = "^1.3.1"
termcolor = "^1.1.0"
diskcache = "^5.3.0"
paramiko = "^2.9.1"
keyring = "^23.4.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
